--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -8,7 +8,7 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
+        @**<div class="nav-item px-3">
             <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 700 700">
                     <path
@@ -16,7 +16,7 @@
                         d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
                 </svg> &nbsp;Home
             </NavLink>
-        </div>
+        </div>**@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/dashboard" Match="NavLinkMatch.All">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 700 700">
@@ -56,7 +56,7 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @**<div class="nav-item px-3">
             <NavLink class="nav-link" href="SignUp">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 700 700">
                     <path
@@ -73,7 +73,7 @@
                         d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>
                 </svg> &nbsp;login
             </NavLink>
-        </div>
+        </div>**@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 700 700">
@@ -83,7 +83,6 @@
                 </svg> &nbsp;About
             </NavLink>
         </div>
-
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 700 700">
@@ -91,11 +90,6 @@
                         fill="white"
                         d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/>
                 </svg> &nbsp;Contact Us
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Test">
-                <span class="bi bi-mailbox-icon" aria-hidden="true"></span> Test
             </NavLink>
         </div>
         <div class="nav-item px-3">
