Landing page now properly logs you in, will need to remove login page for final copy. Passwords are hashed with bcrypt for the profile creation. Sign up page now verifies if you have a valid email and ensures you enter the same password twice.

--- a/BlazorApp/Components/Pages/EventViewer.razor
+++ b/BlazorApp/Components/Pages/EventViewer.razor
@@ -150,8 +150,17 @@
     private int _numMats = 1;
     private bool _internalMatches = false;//bool
     private int allowedMatches;
+    
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await LoadDataAsync();
+            StateHasChanged(); // Ensure the component is re-rendered after data loading
+        }
+    }
 
-    protected override async Task OnInitializedAsync()
+    private async Task LoadDataAsync()
     {
         
         try
